--- a/README.org
+++ b/README.org
@@ -37,82 +37,77 @@ WOWEE is a set of AutoHotKey scripts :
 * kanban
 
 #+begin: kanban :layout ("..." . 50) :scope nil :range ("TODO" . "DONE") :sort "O" :depth 3 :compressed t
-| TODO                           | DOING                   | DONE                   |
-|--------------------------------+-------------------------+------------------------|
-| [[file:README.org::*swap scroll_up and scroll_down][swap scroll_up and scroll_down]] | [[file:README.org::*motion commands][motion commands]]         | [[file:README.org::*forward_char][forward_char]]           |
-| [[file:README.org::*scroll_left][scroll_left]]                    | [[file:README.org::*jumping around commands][jumping around commands]] | [[file:README.org::*backward_char][backward_char]]          |
-| [[file:README.org::*scroll_right][scroll_right]]                   |                         | [[file:README.org::*forward_word][forward_word]]           |
-| [[file:README.org::*goto_line][goto_line]]                      |                         | [[file:README.org::*backward_word][backward_word]]          |
-| [[file:README.org::*region commands][region commands]]                |                         | [[file:README.org::*next_line][next_line]]              |
-| [[file:README.org::*mark_word][mark_word]]                      |                         | [[file:README.org::*previous_line][previous_line]]          |
-| [[file:README.org::*mark_whole_line][mark_whole_line]]                |                         | [[file:README.org::*scroll_down][scroll_down]]            |
-| [[file:README.org::*mark_whole_buffer][mark_whole_buffer]]              |                         | [[file:README.org::*scroll_up][scroll_up]]              |
-| [[file:README.org::*kill_region][kill_region]]                    |                         | [[file:README.org::*move_beginning_of_line][move_beginning_of_line]] |
-| [[file:README.org::*yank_pop][yank_pop]]                       |                         | [[file:README.org::*move_end_of_line][move_end_of_line]]       |
-| [[file:README.org::*delete_backward_char][delete_backward_char]]           |                         | [[file:README.org::*beginning_of_buffer][beginning_of_buffer]]    |
-| [[file:README.org::*kill_word][kill_word]]                      |                         | [[file:README.org::*end_of_buffer][end_of_buffer]]          |
-| [[file:README.org::*backward_kill_word][backward_kill_word]]             |                         | [[file:README.org::*kill_ring_save][kill_ring_save]]         |
-| [[file:README.org::*kill_line][kill_line]]                      |                         | [[file:README.org::*yank][yank]]                   |
-| [[file:README.org::*kill_whole_line][kill_whole_line]]                |                         | [[file:README.org::*delete_char][delete_char]]            |
-| [[file:README.org::*newline and indent commands][newline and indent commands]]    |                         | [[file:README.org::*undo_only][undo_only]]              |
-| [[file:README.org::*newline][newline]]                        |                         | [[file:README.org::*save_buffer][save_buffer]]            |
-| [[file:README.org::*open_line][open_line]]                      |                         |                        |
-| [[file:README.org::*indent_for_tab_command][indent_for_tab_command]]         |                         |                        |
-| [[file:README.org::*delete_indentation][delete_indentation]]             |                         |                        |
-| [[file:README.org::*edit commands][edit commands]]                  |                         |                        |
-| [[file:README.org::*redo][redo]]                           |                         |                        |
-| [[file:README.org::*transpose_chars][transpose_chars]]                |                         |                        |
-| [[file:README.org::*transpose_words][transpose_words]]                |                         |                        |
-| [[file:README.org::*transpose_lines][transpose_lines]]                |                         |                        |
-| [[file:README.org::*query_replace][query_replace]]                  |                         |                        |
-| [[file:README.org::*search_forward][search_forward]]                 |                         |                        |
-| [[file:README.org::*overwrite_mode][overwrite_mode]]                 |                         |                        |
-| [[file:README.org::*case conversion commands][case conversion commands]]       |                         |                        |
-| [[file:README.org::*upcase_region][upcase_region]]                  |                         |                        |
-| [[file:README.org::*downcase_region][downcase_region]]                |                         |                        |
-| [[file:README.org::*upcase_word][upcase_word]]                    |                         |                        |
-| [[file:README.org::*downcase_word][downcase_word]]                  |                         |                        |
-| [[file:README.org::*capitalize_word][capitalize_word]]                |                         |                        |
-| [[file:README.org::*insert pairs commands][insert pairs commands]]          |                         |                        |
-| [[file:README.org::*insert_parentheses][insert_parentheses]]             |                         |                        |
-| [[file:README.org::*insert_comment][insert_comment]]                 |                         |                        |
-| [[file:README.org::*indent_new_comment_line][indent_new_comment_line]]        |                         |                        |
-| [[file:README.org::*other commands][other commands]]                 |                         |                        |
-| [[file:README.org::*shell][shell]]                          |                         |                        |
-| [[file:README.org::*shell_command][shell_command]]                  |                         |                        |
-| [[file:README.org::*facemenu][facemenu]]                       |                         |                        |
-| [[file:README.org::*help][help]]                           |                         |                        |
-| [[file:README.org::*system commands][system commands]]                |                         |                        |
-| [[file:README.org::*ignore][ignore]]                         |                         |                        |
-| [[file:README.org::*set_mark_command][set_mark_command]]               |                         |                        |
-| [[file:README.org::*set_cx_command][set_cx_command]]                 |                         |                        |
-| [[file:README.org::*keyboard_quit][keyboard_quit]]                  |                         |                        |
-| [[file:README.org::*repeat][repeat]]                         |                         |                        |
-| [[file:README.org::*digit argument commands][digit argument commands]]        |                         |                        |
-| [[file:README.org::*macro recording commands][macro recording commands]]       |                         |                        |
-| [[file:README.org::*files commands][files commands]]                 |                         |                        |
-| [[file:README.org::*write_file][write_file]]                     |                         |                        |
-| [[file:README.org::*find_file][find_file]]                      |                         |                        |
-| [[file:README.org::*dired][dired]]                          |                         |                        |
-| [[file:README.org::*windows frames commands][windows frames commands]]        |                         |                        |
-| [[file:README.org::*kill_frame][kill_frame]]                     |                         |                        |
-| [[file:README.org::*delete_window][delete_window]]                  |                         |                        |
-| [[file:README.org::*split_window][split_window]]                   |                         |                        |
-| [[file:README.org::*next_window][next_window]]                    |                         |                        |
-| [[file:README.org::*previous_window][previous_window]]                |                         |                        |
-| [[file:README.org::*suspend_frame][suspend_frame]]                  |                         |                        |
-| [[file:README.org::*add hooks][add hooks]]                      |                         |                        |
-| [[file:README.org::*add ignore frames][add ignore frames]]              |                         |                        |
-| [[file:README.org::*add goto line][add goto line]]                  |                         |                        |
-| [[file:README.org::*add kill ring][add kill ring]]                  |                         |                        |
-| [[file:README.org::*add mouse events][add mouse events]]               |                         |                        |
-| [[file:README.org::*add C-x][add C-x]]                        |                         |                        |
+| TODO                        | DOING                   | DONE                           |
+|-----------------------------+-------------------------+--------------------------------|
+| [[file:README.org::*scroll_left][scroll_left]]                 | [[file:README.org::*jumping around commands][jumping around commands]] | [[file:README.org::*swap scroll_up and scroll_down][swap scroll_up and scroll_down]] |
+| [[file:README.org::*scroll_right][scroll_right]]                |                         | [[file:README.org::*motion commands][motion commands]]                |
+| [[file:README.org::*goto_line][goto_line]]                   |                         | [[file:README.org::*forward_char][forward_char]]                   |
+| [[file:README.org::*region commands][region commands]]             |                         | [[file:README.org::*backward_char][backward_char]]                  |
+| [[file:README.org::*mark_word][mark_word]]                   |                         | [[file:README.org::*forward_word][forward_word]]                   |
+| [[file:README.org::*mark_whole_line][mark_whole_line]]             |                         | [[file:README.org::*backward_word][backward_word]]                  |
+| [[file:README.org::*mark_whole_buffer][mark_whole_buffer]]           |                         | [[file:README.org::*next_line][next_line]]                      |
+| [[file:README.org::*kill_region][kill_region]]                 |                         | [[file:README.org::*previous_line][previous_line]]                  |
+| [[file:README.org::*yank_pop][yank_pop]]                    |                         | [[file:README.org::*scroll_down][scroll_down]]                    |
+| [[file:README.org::*delete_backward_char][delete_backward_char]]        |                         | [[file:README.org::*scroll_up][scroll_up]]                      |
+| [[file:README.org::*kill_word][kill_word]]                   |                         | [[file:README.org::*move_beginning_of_line][move_beginning_of_line]]         |
+| [[file:README.org::*backward_kill_word][backward_kill_word]]          |                         | [[file:README.org::*move_end_of_line][move_end_of_line]]               |
+| [[file:README.org::*kill_whole_line][kill_whole_line]]             |                         | [[file:README.org::*beginning_of_buffer][beginning_of_buffer]]            |
+| [[file:README.org::*newline and indent commands][newline and indent commands]] |                         | [[file:README.org::*end_of_buffer][end_of_buffer]]                  |
+| [[file:README.org::*newline][newline]]                     |                         | [[file:README.org::*kill_ring_save][kill_ring_save]]                 |
+| [[file:README.org::*open_line][open_line]]                   |                         | [[file:README.org::*yank][yank]]                           |
+| [[file:README.org::*indent_for_tab_command][indent_for_tab_command]]      |                         | [[file:README.org::*delete_char][delete_char]]                    |
+| [[file:README.org::*delete_indentation][delete_indentation]]          |                         | [[file:README.org::*kill_line][kill_line]]                      |
+| [[file:README.org::*edit commands][edit commands]]               |                         | [[file:README.org::*undo_only][undo_only]]                      |
+| [[file:README.org::*redo][redo]]                        |                         | [[file:README.org::*set_mark_command][set_mark_command]]               |
+| [[file:README.org::*transpose_chars][transpose_chars]]             |                         | [[file:README.org::*set_cx_command][set_cx_command]]                 |
+| [[file:README.org::*transpose_words][transpose_words]]             |                         | [[file:README.org::*keyboard_quit][keyboard_quit]]                  |
+| [[file:README.org::*transpose_lines][transpose_lines]]             |                         | [[file:README.org::*save_buffer][save_buffer]]                    |
+| [[file:README.org::*query_replace][query_replace]]               |                         |                                |
+| [[file:README.org::*search_forward][search_forward]]              |                         |                                |
+| [[file:README.org::*overwrite_mode][overwrite_mode]]              |                         |                                |
+| [[file:README.org::*case conversion commands][case conversion commands]]    |                         |                                |
+| [[file:README.org::*upcase_region][upcase_region]]               |                         |                                |
+| [[file:README.org::*downcase_region][downcase_region]]             |                         |                                |
+| [[file:README.org::*upcase_word][upcase_word]]                 |                         |                                |
+| [[file:README.org::*downcase_word][downcase_word]]               |                         |                                |
+| [[file:README.org::*capitalize_word][capitalize_word]]             |                         |                                |
+| [[file:README.org::*insert pairs commands][insert pairs commands]]       |                         |                                |
+| [[file:README.org::*insert_parentheses][insert_parentheses]]          |                         |                                |
+| [[file:README.org::*insert_comment][insert_comment]]              |                         |                                |
+| [[file:README.org::*indent_new_comment_line][indent_new_comment_line]]     |                         |                                |
+| [[file:README.org::*other commands][other commands]]              |                         |                                |
+| [[file:README.org::*shell][shell]]                       |                         |                                |
+| [[file:README.org::*shell_command][shell_command]]               |                         |                                |
+| [[file:README.org::*facemenu][facemenu]]                    |                         |                                |
+| [[file:README.org::*help][help]]                        |                         |                                |
+| [[file:README.org::*system commands][system commands]]             |                         |                                |
+| [[file:README.org::*ignore][ignore]]                      |                         |                                |
+| [[file:README.org::*repeat][repeat]]                      |                         |                                |
+| [[file:README.org::*digit argument commands][digit argument commands]]     |                         |                                |
+| [[file:README.org::*macro recording commands][macro recording commands]]    |                         |                                |
+| [[file:README.org::*files commands][files commands]]              |                         |                                |
+| [[file:README.org::*write_file][write_file]]                  |                         |                                |
+| [[file:README.org::*find_file][find_file]]                   |                         |                                |
+| [[file:README.org::*dired][dired]]                       |                         |                                |
+| [[file:README.org::*windows frames commands][windows frames commands]]     |                         |                                |
+| [[file:README.org::*kill_frame][kill_frame]]                  |                         |                                |
+| [[file:README.org::*delete_window][delete_window]]               |                         |                                |
+| [[file:README.org::*split_window][split_window]]                |                         |                                |
+| [[file:README.org::*next_window][next_window]]                 |                         |                                |
+| [[file:README.org::*previous_window][previous_window]]             |                         |                                |
+| [[file:README.org::*suspend_frame][suspend_frame]]               |                         |                                |
+| [[file:README.org::*add hooks][add hooks]]                   |                         |                                |
+| [[file:README.org::*add ignore frames][add ignore frames]]           |                         |                                |
+| [[file:README.org::*add goto line][add goto line]]               |                         |                                |
+| [[file:README.org::*add kill ring][add kill ring]]               |                         |                                |
+| [[file:README.org::*add mouse events][add mouse events]]            |                         |                                |
+| [[file:README.org::*add C-x][add C-x]]                     |                         |                                |
 #+end:
 
 * ROADMAP
 
-** TODO swap scroll_up and scroll_down
-** DOING motion commands
+** DONE swap scroll_up and scroll_down
+** DONE motion commands
 *** DONE forward_char
 *** DONE backward_char
 *** DONE forward_word
@@ -141,7 +136,7 @@ WOWEE is a set of AutoHotKey scripts :
 *** TODO delete_backward_char
 *** TODO kill_word
 *** TODO backward_kill_word
-*** TODO kill_line
+*** DONE kill_line
 *** TODO kill_whole_line
 ** TODO newline and indent commands
 *** TODO newline
@@ -174,9 +169,9 @@ WOWEE is a set of AutoHotKey scripts :
 *** TODO help
 ** TODO system commands
 *** TODO ignore
-*** TODO set_mark_command
-*** TODO set_cx_command
-*** TODO keyboard_quit
+*** DONE set_mark_command
+*** DONE set_cx_command
+*** DONE keyboard_quit
 *** TODO repeat
 ** TODO digit argument commands
 ** TODO macro recording commands
